# SourceExplorer

./: .clang-format  .gitignore  .gitmodules  Makefile  README.md  cheatengine.lua  clang_clean_build.sh  clang_setup.sh  compile.bat  compile.sh  compiledebug.bat  generate_git_file.bat  generate_git_file.sh  make.bat  makelist.bat  meson.build  meson_options.txt  msvc.bat  msvc_clean_build.sh  msvc_compile.sh  msvc_release.sh  release.bat  setup.bat  setup.sh  win_compile.sh  win_setup.sh
.github/ISSUE_TEMPLATE/: broken_game.yaml  bug_report.md  bug_report.yaml  feature_request.md  feature_request.yaml  startup-failure.md
.github/workflows/: build.yaml  main.yaml  release.yaml
docs/: .gitignore  Makefile  main.tex
include/: imgui_memory_editor.h  meson.build  stb_image.h  tinf.h  tinflate.c  tinflate.cpp  tinflate.hpp
include/GL/: gl3w.c
include/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_internal.h  imgui_widgets.cpp
include/lak/: image.h  math.cpp  math.h  vec.h
include/lak/opengl/: shader.cpp  shader.hpp  state.hpp  texture.cpp  texture.hpp
include/lak2/lak/: image.h  vec.h
include/lak2/lak/opengl/: shader.cpp  shader.hpp  state.hpp  texture.cpp
src/: .gitignore  all.cpp  await.hpp  base_window.hpp  binary_analysis_window.hpp  byte_pairs_window.hpp  data_reader.hpp  data_ref.hpp  debug.cpp  debug.h  defines.h  dump.cpp  dump.h  encryption.cpp  encryption.h  explorer.cpp  explorer.h  explorer_error.hpp  image.cpp  image.h  imgui_impl_lak.cpp  imgui_impl_lak.h  imgui_utils.cpp  imgui_utils.hpp  lak.cpp  lak.h  lisk_editor.cpp  lisk_editor.hpp  lisk_impl.cpp  lisk_impl.hpp  main.cpp  main.h  main_window.hpp  memorystream.cpp  memorystream.h  meson.build  object.cpp  object.h  srcexplr.cpp  srcexplr.h  (+4 more)
src/ctf/: common.cpp  common.hpp  defines.hpp  encryption.cpp  encryption.hpp  explorer.cpp  explorer.hpp  meson.build
src/ctf/chunks/: additional_extensions.cpp  additional_extensions.hpp  application_doc.cpp  application_doc.hpp  bank_offsets.cpp  bank_offsets.hpp  basic.cpp  basic.hpp  binary_files.cpp  binary_files.hpp  chunk_224F.cpp  chunk_224F.hpp  chunk_2253.cpp  chunk_2253.hpp  chunk_2255.cpp  chunk_2255.hpp  chunk_2257.cpp  chunk_2257.hpp  compressed.cpp  compressed.hpp  demo_version.cpp  demo_version.hpp  exe.cpp  exe.hpp  extended_header.cpp  extended_header.hpp  extension_data.cpp  extension_data.hpp  extension_list.cpp  extension_list.hpp  extension_path.cpp  extension_path.hpp  extensions.cpp  extensions.hpp  font_bank.cpp  font_bank.hpp  frame_bank.cpp  frame_bank.hpp  fusion_3_seed.cpp  fusion_3_seed.hpp  (+61 more)
subprojects/: .gitignore  binex.wrap  glm.wrap  imgui.wrap  lak.wrap
subprojects/packagefiles/glm/: meson.build
