option(
  'use_vendored_windows_sdl',
  type: 'boolean',
  value: true,
  yield: false,
)

option(
  'lak_backend',
  type: 'combo',
  choices: [
    'win32',
    'xlib',
    'xcb',
    'sdl',
    'qt',
  ],
  value: 'sdl',
  yield: false,
)

option(
  'enable_llvm',
  type: 'boolean',
  value: false,
  yield: false,
)

option(
  'use_vendored_llvm',
  type: 'boolean',
  value: false,
  yield: false,
)

option(
  'llvm_components',
  type: 'array',
  value: [
    'Native',
  ],
  yield: false,
)

option(
  'llvm_install_components',
  type: 'array',
  value: [
    'Core',
    'ExecutionEngine',
    'OrcJIT',
    'Support',
  ],
  yield: false,
)

option(
  'llvm_parallel_link_jobs',
  type: 'string',
  value: '4',
  yield: false,
)

option(
  'enable_lmdb',
  type: 'boolean',
  value: true,
  yield: false,
)
