# testing options

option('lak_enable_tests',
	type: 'boolean',
	value: true,
	yield: true,
)

# windowing options

option('lak_enable_windowing',
	type: 'boolean',
	value: true,
	yield: true,
)

option('sdl2_from_source',
	type: 'boolean',
	value: true,
	yield: true,
)

option('lak_backend',
  type: 'combo',
  choices: [
    'win32',
    'xlib',
    'xcb',
    'sdl',
    'qt',
  ],
  value: 'sdl',
  yield: false,
)

# llvm options

option('lak_enable_llvm',
  type: 'boolean',
  value: false,
  yield: false,
)

# lmdb options

option('lak_enable_lmdb',
	type: 'boolean',
	value: true,
	yield: true,
)

# glm options

option('lak_enable_glm',
	type: 'boolean',
	value: true,
	yield: true,
)

# dear imgui options

option('lak_enable_imgui',
	type: 'boolean',
	value: true,
	yield: true,
)
