subdir('lisk/src')

binex_subprj = subproject('binex')
binex_core_dep = binex_subprj.get_variable('binex_core_dep')

stb_subprj = subproject('stb')
stb_image_dep = stb_subprj.get_variable('stb_image_dep')
stb_image_write_dep = stb_subprj.get_variable('stb_image_write_dep')

imgui_color_text_edit_dep = subproject('imgui').get_variable('imgui_color_text_edit_dep')
