srcexp_ctf_chunks = files([
	'additional_extensions.cpp',
	'application_doc.cpp',
	'bank_offsets.cpp',
	'basic.cpp',
	'binary_files.cpp',
	'chunk_224F.cpp',
	'chunk_2253.cpp',
	'chunk_2255.cpp',
	'chunk_2257.cpp',
	'compressed.cpp',
	'demo_version.cpp',
	'exe.cpp',
	'extended_header.cpp',
	'extension_data.cpp',
	'extension_list.cpp',
	'extension_path.cpp',
	'extensions.cpp',
	'font_bank.cpp',
	'frame_bank.cpp',
	'fusion_3_seed.cpp',
	'global_events.cpp',
	'global_string_names.cpp',
	'global_strings.cpp',
	'global_value_names.cpp',
	'global_values.cpp',
	'header.cpp',
	'icon.cpp',
	'image_bank.cpp',
	'last.cpp',
	'menu_images.cpp',
	'menu.cpp',
	'movement_extensions.cpp',
	'music_bank.cpp',
	'object_bank.cpp',
	'object_bank2.cpp',
	'object_names.cpp',
	'object_properties.cpp',
	'other_extension.cpp',
	'protection.cpp',
	'security_number.cpp',
	'shaders.cpp',
	'sound_bank.cpp',
	'spacer.cpp',
	'string.cpp',
	'strings.cpp',
	'title2.cpp',
	'truetype_fonts_meta.cpp',
	'truetype_fonts.cpp',
	'two_five_plus_object_properties.cpp',
	'vitalise_preview.cpp',
])
